--- a/4257_XR1/4257_XR1.html
+++ b/4257_XR1/4257_XR1.html
@@ -13,13 +13,13 @@
     <style type="text/css">
       body { -ms-touch-action: none; }
     </style>
-    <script type="text/javascript" src="4257_XR/files/KeyShotXR.js"></script>
+    <script type="text/javascript" src="4257_XR1/files/KeyShotXR.js"></script>
     <script type="text/javascript">
       var keyshotXR;
 
       function initKeyShotXR() {
         var nameOfDiv = "KeyShotXR";
-        var folderName = "4257_XR";
+        var folderName = "4257_XR1";
         var viewPortWidth = 1192;
         var viewPortHeight = 828;
         var backgroundColor = "#FFFFFF";
